tests/suite/fail/generated/types/fail_sub_string_f64.ny
fn main() {
    let _ = "a" - 1.0 //~ ERROR Invalid operation on string
}
